compiler/testData/multiplatform/classScopes/enumsWithDifferentEntries/output.txt
-- Common --
Exit code: OK
Output:
compiler/testData/multiplatform/classScopes/enumsWithDifferentEntries/common.kt:1:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect enum class AB { A, B }
^^^^^^
compiler/testData/multiplatform/classScopes/enumsWithDifferentEntries/common.kt:3:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect enum class CD { C, D }
^^^^^^

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/classScopes/enumsWithDifferentEntries/jvm.kt:1:19: error: the 'expect' and the 'actual' declarations are incompatible.
  The 'expect' declaration: expect enum class AB : Enum<AB>
  The 'actual' declaration: actual enum class AB : Enum<AB>
Reason: some entries from 'expect enum' are missing in the 'actual enum'
actual enum class AB { A, C }
                  ^^
compiler/testData/multiplatform/classScopes/enumsWithDifferentEntries/jvm.kt:3:19: error: the 'expect' and the 'actual' declarations are incompatible.
  The 'expect' declaration: expect enum class CD : Enum<CD>
  The 'actual' declaration: actual enum class CD : Enum<CD>
Reason: some entries from 'expect enum' are missing in the 'actual enum'
actual enum class CD { C }
                  ^^
